# swarm-tactics-v2

./: .gitignore  Cargo.toml  package-lock.json
python_connector/: main.py
src/: form.html  main.rs
web/: README.md  package-lock.json  package.json
