[package]
name = "swarm-tactics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
rmp-serde = "1.3.0"
axum = { version = "0.7.5", features = ["ws"] }
tokio-serde = "0.9.0"
tokio-util = "0.7.11"
tower = "0.4.13"
